syntax = "proto3";
option go_package = "github.com/rima971/allocator";
package deliveryAgentAllocator;

message DeliveryAgent {
  int32 id = 1;
  int32 UserId = 2;
  int32 CurrentLocationPincode = 3;
}

message AllocatorRequest {
  int32 deliveryLocationPincode = 1;
}

message AllocatorResponse {
  DeliveryAgent deliveryAgent = 1;
}

service DeliveryAgentAllocatorService {
  rpc allocate(AllocatorRequest) returns (AllocatorResponse);
}